AC_INIT([omphalos], [0.99.1-pre], [omphalos-dev@googlegroups.com], [omphalos], [http://dank.qemfd.net/dankwiki/index.php/Omphalos])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_CONFIG_HEADER(config.h:config.in)
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_CC_C99
AC_PROG_INSTALL
AC_C_INLINE
AC_C_RESTRICT
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_HEADER_STDBOOL
AC_CHECK_FUNCS([btowc])
AC_CHECK_FUNCS([gethostname])
AC_CHECK_FUNCS([getpagesize])
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([nl_langinfo])
AC_CHECK_FUNCS([setlocale])
AC_CHECK_FUNCS([socket])
AC_CHECK_FUNCS([strerror])
AC_CHECK_FUNCS([uname])
AC_CHECK_HEADERS([arpa/inet.h])
AC_CHECK_HEADERS([langinfo.h])
AC_CHECK_HEADERS([limits.h])
AC_CHECK_HEADERS([locale.h])
AC_CHECK_HEADERS([netinet/in.h])
AC_CHECK_HEADERS([stddef.h])
AC_CHECK_HEADERS([sys/ioctl.h])
AC_CHECK_HEADERS([sys/socket.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([wchar.h])
AC_CHECK_HEADERS([wctype.h])
AC_CHECK_TYPES([ptrdiff_t])
AC_CHECK_PROG(XSLTPROC,xsltproc,xsltproc,)
PKG_CHECK_MODULES(LIBNL3, libnl-3.0 = 3.0, [have_libnl3=yes])
if (test "${have_libnl3}" = "yes"); then
        CFLAGS+="$LIBNL3_CFLAGS"
        LIBS+="$LIBNL3_LIBS"
fi
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
