AC_INIT([omphalos], [0.99.1-pre], [omphalos-dev@googlegroups.com], [omphalos], [http://dank.qemfd.net/dankwiki/index.php/Omphalos])
AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-bzip2])
AM_CONFIG_HEADER(config.h:config.in)
AC_USE_SYSTEM_EXTENSIONS
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_CC_C99
AC_PROG_INSTALL
AC_C_INLINE
AC_C_RESTRICT
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_HEADER_STDBOOL
AC_CHECK_FUNCS([btowc])
AC_CHECK_FUNCS([gethostname])
AC_CHECK_FUNCS([getpagesize])
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([nl_langinfo])
AC_CHECK_FUNCS([setlocale])
AC_CHECK_FUNCS([socket])
AC_CHECK_FUNCS([strerror])
AC_CHECK_FUNCS([uname])
AC_CHECK_HEADERS([arpa/inet.h])
AC_CHECK_HEADERS([langinfo.h])
AC_CHECK_HEADERS([limits.h])
AC_CHECK_HEADERS([locale.h])
AC_CHECK_HEADERS([netinet/in.h])
AC_CHECK_HEADERS([stddef.h])
AC_CHECK_HEADERS([sys/ioctl.h])
AC_CHECK_HEADERS([sys/socket.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([wchar.h])
AC_CHECK_HEADERS([wctype.h])
AC_CHECK_TYPES([ptrdiff_t])
AX_WITH_CURSES
AX_WITH_CURSES_PANEL
if test "x$ax_cv_panel" != xyes; then
	AC_MSG_WARN([Cannot find the Curses Panel library])
else
	CONFIGURED_UIS+=" ncurses"
fi
AX_PROG_XSLTPROC
if test "$XSLTPROC" = no ; then
	AC_MSG_ERROR([Cannot find xsltproc.])
fi
AC_CHECK_PROGS(MANBIN,makewhatis mandb,no)
if test "$MANBIN" = no ; then
	AC_MSG_ERROR([Cannot find manpage indexer.])
fi
AC_CHECK_LIB(iw,iw_get_kernel_we_version)
AC_CHECK_LIB(cap,cap_get_proc)
AC_CHECK_LIB(pcap,pcap_create)
AC_CHECK_LIB(pciaccess,pci_system_init)
PKG_CHECK_MODULES(X11, x11, [have_x11=yes], [have_x11=no])
if test "$have_x11" = no ; then
	AC_MSG_WARN([Cannot find X11 headers. Will not build X11 client.])
else
	CONFIGURED_UIS+=" x"
	X_CFLAGS+="$LIBX11_CFLAGS"
	X_LIBS+="$LIBX11_LIBS"
fi
PKG_CHECK_MODULES(LIBNL3, libnl-3.0 = 3.0, [have_libnl3=yes])
	CFLAGS+="$LIBNL3_CFLAGS"
	LIBS+="$LIBNL3_LIBS"
PKG_CHECK_MODULES(LIBSYSFS, libsysfs, [have_libsysfs=yes])
	CFLAGS+="$LIBSYSFS_CFLAGS"
	LIBS+="$LIBSYSFS_LIBS"
PKG_CHECK_MODULES(LIBZ, zlib, [have_zlib=yes])
	CFLAGS+="$LIBZ_CFLAGS"
	LIBS+="$LIBZ_LIBS"
AX_LIB_READLINE
if test "$have_readline" = no ; then
	AC_MSG_WARN([Cannot find readline headers. Will not build TTY client.])
else
	CONFIGURED_UIS+=" tty"
fi
AC_SUBST([CONFIGURED_UIS])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
